tests/spec/format/snapshots/comment_before_match_arm.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
      match x {
          // comment before arm
          Some(a) => a,
          None => 0,
      }
  }
---
fn test() {
  match x {
    // comment before arm
    Some(a) => a,
    None => 0,
  }
}
