tests/spec/format/snapshots/comment_between_attr_and_fn_definition.snap
---
source: tests/spec/format/mod.rs
description: |-
  #[attr]
  // between attr and fn
  fn f() {}
---
#[attr]
// between attr and fn
fn f() {}
