tests/spec/format/snapshots/comment_between_attr_and_interface_method.snap
---
source: tests/spec/format/mod.rs
description: |-
  interface I {
    #[a]
    // between attr and method
    fn first()
  }
---
interface I {
  #[a]
  // between attr and method
  fn first()
}
