tests/spec/format/snapshots/comment_between_attr_and_struct_definition.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct A {}
  
  #[attr]
  // between attr and struct decl
  struct B {}
---
struct A {}

#[attr]
// between attr and struct decl
struct B {}
