tests/spec/format/snapshots/comment_between_attr_and_struct_field.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct S {
    #[a]
    // between attr and field
    x: int,
  }
---
struct S {
  #[a]
  // between attr and field
  x: int,
}
