tests/spec/format/snapshots/comment_between_attribute_and_type_alias_definition.snap
---
source: tests/spec/format/mod.rs
description: |-
  #[go(alias)]
  // alias detail
  type UserId = int
---
#[go(alias)]
// alias detail
type UserId = int
