tests/spec/format/snapshots/comment_between_enum_variants.snap
---
source: tests/spec/format/mod.rs
description: |-
  enum E {
    A,
    // between variants
    B,
    C,
  }
---
enum E {
  A,
  // between variants
  B,
  C,
}
