tests/spec/format/snapshots/comment_between_field_attributes.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct S {
    #[a]
    // between attributes
    #[b]
    pub name: string,
  }
---
struct S {
  #[a]
  // between attributes
  #[b]
  pub name: string,
}
