tests/spec/format/snapshots/comment_between_fn_params.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f(
    a: int,
    // between params
    b: int,
  ) -> int { a + b }
---
fn f(
  a: int,
  // between params
  b: int,
) -> int {
  a + b
}
