tests/spec/format/snapshots/comment_between_interface_methods.snap
---
source: tests/spec/format/mod.rs
description: |-
  interface I {
    fn first()
    // between methods
    fn second()
  }
---
interface I {
  fn first()
  // between methods
  fn second()
}
