tests/spec/format/snapshots/comment_between_interface_parents.snap
---
source: tests/spec/format/mod.rs
description: |-
  interface I {
    embed A
    // between parents
    embed B
    fn first()
  }
---
interface I {
  embed A
  // between parents
  embed B
  fn first()
}
