tests/spec/format/snapshots/comment_between_lambda_params.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f() -> int {
    let g = |
      a: int,
      // between lambda params
      b: int,
    | a + b
    g(1, 2)
  }
---
fn f() -> int {
  let g = |
    a: int,
    // between lambda params
    b: int,
  | a + b
  g(1, 2)
}
